--- a/Fronte_End/pages/login.html
+++ b/Fronte_End/pages/login.html
@@ -25,8 +25,9 @@
 
   <!-- Template Dashboard CSS File -->
   <link href="../assets/css/dashboardStyle.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/vendor/styleslog/sb-admin-2.min.css">
-  <link rel="stylesheet" href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.css">
+
+      <link rel="stylesheet" href="../assets/vendor/styleslog/sb-admin-2.min.css">
+<!--  <link rel="stylesheet" href="../assets/vendor/sweetalert2-11.6.16/sweetalert2.css">-->
 
 
 </head>
@@ -166,5 +167,6 @@
 <script src="../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
 <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 <script src="../controller/loginController.js"></script>
+<script src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.js"></script>
 </body>
 </html>
