--- a/Fronte_End/pages/adminPages/Inventory.html
+++ b/Fronte_End/pages/adminPages/Inventory.html
@@ -436,7 +436,7 @@
                                     <input type="text" name="status" class="form-control" id="Inv_Status">
                                     <span class="control-error"></span>
                                 </div>
-                                <img id="img" src="../../assets/img/nethmi.jpg" width="300px">
+                                <img id="img" src="../../assets/img/my.jpg" width="300px">
 
                                 <input type="file" id="imgInput" accept="image/*" style="display: none">
 
