--- a/Fronte_End/pages/adminDashBoard.html
+++ b/Fronte_End/pages/adminDashBoard.html
@@ -202,7 +202,7 @@
               <div class="card-body" style="background-color: #e6e6e6">
                 <h5 class="card-title" style="color: black">Total Items</h5>
                 <div class="d-flex align-items-center">
-                  <img src="../assets/img/diagram.gif" height="70px" width="70px">
+                  <img src="../assets/img/online-shopping.gif" height="70px" width="70px">
                   <div class="ps-3">
                     <h6 id="totalItems">0</h6>
                   </div>
@@ -210,6 +210,21 @@
               </div>
             </div>
           </div>
+
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card car-card" style="background-color: #e6e6e6">
+              <div class="card-body" style="background-color: #e6e6e6">
+                <h5 class="card-title" style="color: black">Total Employee</h5>
+                <div class="d-flex align-items-center">
+                  <img src="../assets/img/employee.gif" height="70px" width="70px">
+                  <div class="ps-3">
+                    <h6 id="totalEmployee">0</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <img id="panelImg" src="../assets/img/yello-shoe-removebg-preview.png" width="300px">
         <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="position: absolute; width: 400px; height: 60px; right: 30vh; bottom: 10vh;" id="itemCodeDiv">Item code: <span id="dashItemCode"></span></div>
