--- a/Fronte_End/pages/userPages/OrderDetails.html
+++ b/Fronte_End/pages/userPages/OrderDetails.html
@@ -126,6 +126,7 @@
                                 <th>total point</th>
                                 <th>cashier name</th>
                                 <th>customer id</th>
+                                <th>status</th>
                             </tr>
                             </thead>
                             <tbody id="tblOrder"></tbody>
@@ -149,6 +150,7 @@
                                 <th>Item Code</th>
                                 <th>Qty</th>
                                 <th>price</th>
+<!--                                <th>status</th>-->
                             </tr>
                             </thead>
                             <tbody id="tblOrderDetails"></tbody>
