--- a/Fronte_End/pages/UserDashBoard.html
+++ b/Fronte_End/pages/UserDashBoard.html
@@ -27,6 +27,7 @@
   <!-- Template Dashboard CSS File -->
   <link href="../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -38,7 +39,11 @@
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
+  <form class="d-none d-md-flex ms-4 " >
+    <input class="form-control border-0" type="search" placeholder="Search">
+  </form>
 
+  <h1 id="greeting"></h1>
  <!-- End Icons Navigation -->
 
 </header>
@@ -123,11 +128,8 @@
                 <h5 class="card-title" style="color: black">Total Sales</h5>
                 <div class="d-flex align-items-center">
                   <img src="../assets/img/money-bag.gif" height="70px" width="70px">
-                  <!--                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">-->
-                  <!--                   <i class="fa-solid fa-truck"></i>-->
-                  <!--                  </div>-->
                   <div class="ps-3">
-                    <h6 id="carCount">0</h6>
+                    <h6 id="totalSales">0</h6>
                   </div>
                 </div>
               </div>
@@ -139,14 +141,26 @@
           <div class="col-xxl-4 col-md-6">
             <div class="card info-card car-card" style="background-color: #e6e6e6">
               <div class="card-body" style="background-color: #e6e6e6">
-                <h5 class="card-title" style="color: black" >Total Profit</h5>
+                <h5 class="card-title" style="color: black">Total Loyalty Customer</h5>
                 <div class="d-flex align-items-center">
-                  <img src="../assets/img/checklist.gif" height="70px" width="70px">
-                  <!--                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">-->
-                  <!--&lt;!&ndash;                    <i class="bi bi-car-front-fill"></i>&ndash;&gt;-->
-                  <!--                  </div>-->
+                  <img src="../assets/img/diagram.gif" height="70px" width="70px">
                   <div class="ps-3">
-                    <h6 id="availableCarCount">0</h6>
+                    <h6 id="totalCustomers">0</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-xxl-4 col-md-6">
+            <div class="card info-card car-card" style="background-color: #e6e6e6">
+              <div class="card-body" style="background-color: #e6e6e6">
+                <h5 class="card-title" style="color: black">Total Employee</h5>
+                <div class="d-flex align-items-center">
+                  <img src="../assets/img/employee.gif" height="70px" width="70px">
+                  <div class="ps-3">
+                    <h6 id="totalEmployee">0</h6>
                   </div>
                 </div>
               </div>
@@ -182,7 +196,10 @@
 <script rel="script" src="../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
 
 <!-- Template Dashboard Main JS File -->
+<script src="../controller/loginController.js"></script>
+<script src="../controller/UserDashboardController.js"></script>
 <script src="../assets/js/dashboardMain.js"></script>
+
 
 <!-- Controller JS File -->
 <script src="../controller/DashBoardController.js"></script>
