--- a/Fronte_End/pages/userPages/OrderDetails.html
+++ b/Fronte_End/pages/userPages/OrderDetails.html
@@ -150,6 +150,7 @@
                                 <th>Item Code</th>
                                 <th>Qty</th>
                                 <th>price</th>
+<!--                                <th>Return Qty</th>-->
 <!--                                <th>status</th>-->
                             </tr>
                             </thead>
