--- a/Fronte_End/pages/adminDashBoard.html
+++ b/Fronte_End/pages/adminDashBoard.html
@@ -41,8 +41,11 @@
     </a>
     <i class="bi bi-list toggle-sidebar-btn"></i>
   </div><!-- End Logo -->
+  <form class="d-none d-md-flex ms-4 " >
+    <input class="form-control border-0" type="search" placeholder="Search">
+  </form>
 
-
+  <h1 id="greeting"></h1>
 </header>
 <!-- End Header -->
 
