--- a/Fronte_End/pages/adminPages/Return.html
+++ b/Fronte_End/pages/adminPages/Return.html
@@ -440,6 +440,7 @@
 <script src="../../assets/vendor/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
 <script src="../../assets/vendor/jQuery/jquery-3.6.1.min.js "></script>
 <script rel="script" src="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.min.js"></script>
+<script src="../../assets/vendor/sweetalert2-11.6.16/sweetalert2.js"></script>
 
 <script src="../../controller/ReturnController.js"></script>
 <script src="../../controller/loginController.js"></script>
